Add doublestroke for mathds

--- a/preamble_math.sty
+++ b/preamble_math.sty
@@ -12,6 +12,7 @@
 \RequirePackage{mathrsfs}  % for "mathscr"
 \RequirePackage{bm}        % for bold math symbols
 \RequirePackage{physics}   % for derivatives and lots of operators
+\RequirePackage{dsfont}    % for \mathds{1}
 
 \RequirePackage{cancel}    % for canceling terms
 \renewcommand{\CancelColor}{\color{red}}
@@ -26,11 +27,11 @@
 \newcommand{\indep}{\perp \!\!\! \perp}
 
 % Sets
-\newcommand{\C}{\mathbb{C}}
-\newcommand{\R}{\mathbb{R}}
-\newcommand{\N}{\mathbb{N}}
-\newcommand{\Q}{\mathbb{Q}}
-\newcommand{\Z}{\mathbb{Z}}
+\newcommand{\C}{\mathds{C}}
+\newcommand{\R}{\mathds{R}}
+\newcommand{\N}{\mathds{N}}
+\newcommand{\Q}{\mathds{Q}}
+\newcommand{\Z}{\mathds{Z}}
 
 % Big-O and small-o notation
 \renewcommand{\O}{\mathcal{O}}
