--- a/statistics.tex
+++ b/statistics.tex
@@ -852,13 +852,13 @@ Equivalently we can define $p$-values for left-sided and double-sided critical r
 \end{gather}
 or in general, the smallest value of $\alpha$ for which the corresponding test rejects $H_0$.
 
-\subsection{Tests}
+\section{Tests}
 
-\subsubsection{Binomial test}
+\subsection{Binomial test}
 
 TODO
 
-\subsubsection{Gauss test (\texorpdfstring{$z$}{z}-test)}
+\subsection{Gauss test (\texorpdfstring{$z$}{z}-test)}
 
 Assume we have $X_1, \dots, X_n \stackrel{\text{IID}}{\sim} \Normal(\theta, \sigma^2)$, where $\sigma^2$ is known.
 Consider $H_0 = \{ \theta \leq \theta_0 \}$ and $H_1 = \{ \theta \gt \theta_0 \}$ (right one-sided).
@@ -903,7 +903,7 @@ we had to introduce the shift because before it was centered around $\theta_0$, 
 
 This procedure works also for left one-sided and two-sided hypothesis.
 
-\subsubsection{\texorpdfstring{$t$}{t}-test}
+\subsection{\texorpdfstring{$t$}{t}-test}
 
 So far we have covered samples from the normal distribution only when the variance was known.
 To deal with the cases where the variance is also unknown we have to introduce the \emph{Student} distribution.
@@ -985,6 +985,30 @@ We get that $T$ is student distributed with $m + n - 2$ degrees of freedom:
 \end{equation}
 and from here proceed as in the normal $t$-test.
 
-If we have \textbf{different variances} we can perform an $F$-test, but \emph{it will not be required for the exam}.
+\subsubsection{Asymptotic T-test}
+
+If we are in the same situation as the two-sample $t$-test but we have different variances
+we cannot proceed as usual as it would encounter bad results.
+However, if we have a large number of samples we can use limit theorems in order to get a better approximation.
+
+Consider as test statistic
+\begin{equation}
+    T = \frac{\bar X - \bar Y}{\sqrt{\frac{S_X^2}{m} - \frac{S_Y^2}{n}}}
+\end{equation}
+and if our $H_0$ is defined as $H_0 : \mu \leq \nu$
+we can consider an approximate critical region of $(\xi_{1-\alpha_0}, \infty)$.
+
+\subsubsection{Wilcoxon signed-rank test}
+
+This test is useful when we are not sure that the samples are coming from a normal distribution.
+This test works for all distributions, hence it is part of the \emph{distribution-free} tests.
+
+Consider $X_1, \dots, X_m$ and $Y_1, \dots, Y_n$.
+
+Construct $R_1, \dots, R_{m}$ as the ranks of the samples:
+consider the sequence $X_1, \dots, X_m, Y_1, \dots, Y_n$ and sort it such that the sequence has length $n+m$.
+Let $R_i$ be the position of $X_i$ in the sorted sequence
+
+\subsection{Good fit tests}
 
 \end{document}
