Oops, formatting mistake

--- a/analysis-3-theorems.tex
+++ b/analysis-3-theorems.tex
@@ -125,7 +125,7 @@
         \item[Inductive step]
               \begin{align}
                   (D - \alpha_\ell)^M[h(t) e^{\alpha_\ell t}] & = (D - \alpha_\ell)^{M-1}\left[ (D - \alpha_\ell) \left[h(t) e^{\alpha_\ell t}\right]\right]                                                               \\
-                                                              & = (D - \alpha_\ell)^{M-1}\left[ h'(t) e^{\alpha_\ell t} + \cancel{h(t)\alpha_\ell e^{\alpha_\ell t}} - \cancel{h(t) \alpha_\ell e^{\alpha_\ell t}} \right]
+                                                              & = (D - \alpha_\ell)^{M-1}\left[ h'(t) e^{\alpha_\ell t} + \cancel{h(t)\alpha_\ell e^{\alpha_\ell t}} - \cancel{h(t) \alpha_\ell e^{\alpha_\ell t}} \right] \\
                                                               & = 0
               \end{align}
               where in the last step we notice that since $h'(t)$ has degree less than $M -1$
